# cqrs-event-sourcing-example

./: Cargo.toml  README.md
src/: main.rs
src/api/: cart_controller.rs  cart_events_controller.rs  mod.rs  product_controller.rs  user_controller.rs
src/application/: mod.rs
src/application/command/: add_to_cart_command.rs  add_to_cart_handler.rs  cart_add_item_command.rs  cart_add_item_handler.rs  cart_remove_item_command.rs  cart_remove_item_handler.rs  create_cart_command.rs  create_cart_handler.rs  mod.rs  remove_from_cart_command.rs  remove_from_cart_handler.rs
src/application/event/: added_to_cart_event.rs  added_to_cart_handler.rs  cart_item_added_event.rs  cart_item_added_handler.rs  cart_item_removed_event.rs  created_cart_event.rs  created_cart_handler.rs  mod.rs  user_cart_created_event.rs  user_cart_created_handler.rs
src/application/query/: cart.rs  cart_query.rs  cart_store.rs  mod.rs  product.rs  replay.rs  user.rs
src/domain/: cart.rs  mod.rs  offering.rs  partner.rs  product.rs  user.rs
src/infrastructure/: mod.rs  replay.rs
src/infrastructure/message_bus/: command_kind.rs  event_kind.rs  handler.rs  message.rs  mod.rs  queue.rs  registry.rs
src/infrastructure/persistence/: event_store.rs  events.rs  products.rs
src/infrastructure/read_stores/: cart.rs
src/services/: mod.rs
src/services/message_bus/: bus.rs  event.rs  handler.rs  message.rs  mod.rs  queue.rs
src/services/persistence/: event_store.rs
