[package]
name = "cqrs-event-sourcing"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.56"
axum = "0.5.12"
chrono = { version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
mongodb = "2.2.2"
tokio = { version = "1.19.2", features = ["full"]}
serde = { version = "1.0.138", features = ["derive"]}
serde_json = "1.0.82"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}